10593
{noformat}
scalac-hash  db46c71e8830639bc79e6363332a06642fd3d8c -Ylog:typer sandbox/test.scala
[log typer] [+symbol] type X (flags: <deferred> <param>)
[log typer] [+symbol] type X (flags: <deferred> <param>)
[log typer] Breaking recursion in lublist, substituting weaker type.
  Was: PIn[Any,Nothing]
  Now: P[Int,Any]
[log typer] Breaking recursion in lublist, substituting weaker type.
  Was: PIn[Any,Nothing]
  Now: P[Int,Any]
[log typer] computing param aliases for object Test:()Test.type:{
  Test.super.<init>();
  ()
}
sandbox/test.scala:11: error: type mismatch;
 found   : P[Int,Any]
 required: PIn[Int,Nothing]
  val pin: PIn[Int,Nothing] = lub
                              ^
one error found
{noformat}
